tests/paczka1/small_fuzzy/36947988.err
Error in line 6: bfhE S882 78,5
Error in line 9: bfhE A401 14,2
